--- a/backRes/.env
+++ b/backRes/.env
@@ -1,3 +1,3 @@
 HOST=mongodb+srv://varis:Ryu2005xD@resproj.qwizgqr.mongodb.net/?retryWrites=true&w=majority&appName=resProj
-DATABASE=fartwork
+DATABASE=fartfood
 PORT=5050
