--- a/backRes/package.json
+++ b/backRes/package.json
@@ -14,7 +14,7 @@
   "type": "module",
   "scripts": {
     "start": "node --loader ts-node/esm index.ts",
-    "dev": "nodemon --watch index.ts --exec \"node --loader ts-node/esm index.ts\"",
+    "dev": "nodemon --watch index.ts --exec \"tsx index.ts\"",
     "build": "tsc",
     "serve": "node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -25,6 +25,7 @@
     "express": "^5.1.0",
     "mongodb": "^6.20.0",
     "nodemon": "^3.1.10",
+    "tsx": "^4.20.6",
     "typescript": "^5.9.3"
   }
 }
